# CUPDataModel

./: .gitignore  CMakeLists.txt  README.md
HDF5Utils/: CMakeLists.txt
HDF5Utils/inc/: AbsH5Base.hh  AbsH5Event.hh  AbsH5Hit.hh  H5DataReader.hh  H5DataWriter.hh  H5FADCEvent.hh  H5FADCHit.hh  H5Log.hh  H5SADCEvent.hh  H5SADCHit.hh
HDF5Utils/src/: AbsH5Base.cc  H5DataReader.cc  H5DataWriter.cc  H5FADCEvent.cc  H5FADCHit.cc  H5SADCEvent.cc  H5SADCHit.cc
HDF5Utils/test/: edge_test.cc  test_fadc_event.cc  test_fadc_hit.cc  test_sadc_event.cc  test_sadc_hit.cc  test_subrun.cc
RawObjs/: CMakeLists.txt
RawObjs/inc/: AChannel.hh  FChannel.hh
RawObjs/src/: AChannel.cc  AChannelData.cc  AbsChannel.cc  ArrayS.cc  EventInfo.cc  FChannel.cc  FChannelData.cc
RawObjs/test/: CMakeLists.txt  write_fadc_root.cc
cmake/: CUPDataModelConfig.cmake.in
